--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ header .logo{
     top: 16;
 }
 header{
-    padding: 15px 0;
+    padding: 15px 0 0 0;
 }
 .container{
     margin: auto;
@@ -197,4 +197,30 @@ color: #000000;
 .german_c{
     max-width: 315px;
     text-align: center;
+}
+.owl-item{
+    text-align: center;
+
+}
+.owl-dots{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.owl-dots .owl-dot span{
+display: inline-block;
+width: 15px;
+height: 15px;
+background:darkgrey;
+border-radius: 50%;
+margin: 5px;
+
+}
+.owl-dots .owl-dot.active  span{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background: palevioletred;
+    border-radius: 50%;  
+    margin: 5px;
 }
