--- a/css/style.css
+++ b/css/style.css
@@ -74,19 +74,23 @@ line-height: 28px;
 color: #000000;
 margin-bottom: 26px;
 }
-.buttom_shop{
-    background: #000000;
-border: 1px solid #000000;
-border-radius: 100px;
-padding: 8px 23px;
-font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 17px;
-line-height: 20px;
-color: #FFFFFF;
-text-decoration: none;
 
+.button_shop_wrapper {
+    display: inline-block;
+    padding: 8px 23px;
+    background: #000000;
+    border: 1px solid #000000;
+    border-radius: 100px;
+}
+
+.buttom_shop{
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+    color: #FFFFFF;
+    text-decoration: none;
 }
 .best_sellers{
 padding-top: 60px;
@@ -200,7 +204,8 @@ color: #000000;
 }
 .owl-item{
     text-align: center;
-
+    display: flex;
+    justify-content: center;
 }
 .owl-dots{
     width: 100%;
@@ -223,4 +228,8 @@ margin: 5px;
     background: palevioletred;
     border-radius: 50%;  
     margin: 5px;
+}
+.img_h1{
+    height: auto;
+width: 100%;
 }
