--- a/css/media.css
+++ b/css/media.css
@@ -1,28 +1,28 @@
 
-@media only screen and (max-width:1100px){
+/* @media only screen and (max-width:1100px){
 .container{
     padding: 0 12px;}
 
     .container_img{
         right: 0;
 }
-}
-@media only screen and (max-width:985px){
+} */
+/* @media only screen and (max-width:985px){
     main .main_banner h1{
         font-size: 55px;
         margin-bottom: 32px;
         margin-top: 60px;
     }
 
-}
-@media only screen and (max-width:903px){
+} */
+/* @media only screen and (max-width:903px){
     main .main_banner h1{
         font-size: 50px;
         margin-bottom: 30px;
         margin-top: 50px;
     }
-}
-@media only screen and (max-width:880px){
+} */
+/* @media only screen and (max-width:880px){
     main .main_banner h1{
         font-size: 45px;
         margin-bottom: 25px;
@@ -34,8 +34,8 @@
     .p_h1{
         font-size: 20px;
     }
-}
-@media only screen and (max-width:868px) {
+} */
+/* @media only screen and (max-width:868px) {
     header nav ul li{
         margin-right: 0px;
     }
@@ -44,8 +44,8 @@
         
     }
 
-}
-@media only screen and (max-width:811px){
+} */
+/* @media only screen and (max-width:811px){
     main .main_banner h1{
         font-size: 40px;
         line-height: 50px;
@@ -54,16 +54,16 @@
         font-size: 10px;
     }
    
-}
-@media only screen and (max-width:787px){
+} */
+/* @media only screen and (max-width:787px){
     .h1_c{
         display: inline-block;
     }
-}
+} */
 @media only screen and (max-width:767px) {
-.open-overlay{
+/* .open-overlay{
     display: inline-block;
-}
+} */
 .overlay-navigation {
     position: fixed;
     z-index: 2;
@@ -92,12 +92,12 @@
     padding: 0;
   }
   
-  nav ul {
+  /* nav ul {
     display: flex;
     list-style: none;
-  }
+  } */
   
-  nav ul li {
+  /* nav ul li {
     flex-basis: 25%;
     justify-content: center;
     align-items: center;
@@ -105,16 +105,16 @@
     overflow: hidden;
     transform: translateY(-100%);
   }
-  
-  nav li a {
+   */
+  /* nav li a {
     position: relative;
     top: 46%;
     text-decoration: none;
     display: block;
     text-align: center;
-  }
+  } */
   
-  nav li a:before {
+  /* nav li a:before {
     content: '';
     position: absolute;
     top: 50%;
@@ -139,7 +139,7 @@
     bottom: -50px;
     text-transform: none;
   }
-  
+   */
   nav li a:hover:before {
     transform: translateX(0);
     opacity: 1;
@@ -149,8 +149,8 @@
     transform: translateY(15px);
     opacity: 1;
   }
-  nav li:nth-of-type(1){background-color: rosybrown}
+  /* nav li:nth-of-type(1){background-color: rosybrown}
   nav li:nth-of-type(2){background-color:grey }
   nav li:nth-of-type(3){background-color: palevioletred}
-  nav li:nth-of-type(4){background-color: cornflowerblue}  
+  nav li:nth-of-type(4){background-color: cornflowerblue}   */
 }
