--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     padding: 0;
     margin: 0;
 }
@@ -232,4 +232,426 @@ margin: 5px;
 .img_h1{
     height: auto;
 width: 100%;
+} */
+
+/* .people_as{
+    padding-top: 76px ;
+    padding-bottom: 51px;
+    background: rgba(204, 204, 204, 0.3);
+border-radius: 0px;
 }
+.people_as .container{
+    display: flex;
+    justify-content: space-between;
+} */
+/* .content_people{
+    max-width: 498px;
+    padding: 70px;
+}
+.content_people h2{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+
+color: #000000;
+margin-bottom: 31px;
+}
+.content_people p{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 42px;
+color: #000000;
+margin-bottom: 40px;
+}
+.content_people a{
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 20px;
+text-decoration-line: underline;
+color: #000000;
+} */
+/* .culture_ah{
+    padding-top: 76px ;
+    padding-bottom: 51px;
+    background: rgba(204, 204, 204, 0.6);
+    border-radius: 0px;
+}
+.culture_ah .container{
+    display: flex;
+    justify-content: space-between;
+}
+.content_culture{
+    max-width: 513px;
+    padding: 92px 0 57px 0;}
+
+.content_culture h2{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: right;
+color: #000000;
+margin-bottom: 31px;
+}
+.content_culture p{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 42px;
+text-align: right;
+color: #000000;
+margin-bottom: 31px;
+}
+.content_culture a{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 20px;
+text-align: right;
+text-decoration-line: underline;
+color: #000000;
+} */
+/* 
+.power_ap{
+    padding-top: 76px ;
+    padding-bottom: 51px;
+    background: rgba(204, 204, 204, 0.3);
+border-radius: 0px;
+}
+.power_ap .container{
+    display: flex;
+    justify-content: space-between;
+}
+.content_power{
+    max-width: 530px;
+    padding: 92px 0 91px 0;}
+
+    .content_power h2{
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 42px;
+        
+        color: #000000;
+margin-bottom: 31px;        
+}
+.content_power p{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 42px;
+color: #000000;
+margin-bottom: 39px;
+}
+.content_power a{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 20px;
+text-decoration-line: underline;
+
+color: #000000;
+} */
+
+/* --------
+section ball
+-------- */
+
+/* .ball{
+    padding-top: 190px;
+    padding-bottom:290px ;
+}
+.b_h2small{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+color: #000000;
+margin-bottom: 69px;
+}
+
+.b_h2large{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+color: #000000;
+}
+.ball .container h3{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 35px;
+text-align: center;
+color: #000000;
+}
+.color_ball{
+    display: inline-block;
+    width: 33%;
+    margin-bottom: 100px;
+}
+
+.style_ball{
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    border-radius: 50%;
+}
+.sky_color{
+    background-color: #21F7EC;
+}
+.green_color{
+    background: #33D3BC;
+}
+.blue_color{
+    background: #18A5C6;
+}
+.brouwn_color{
+    background: #D38F62;
+}
+.red_color{
+    background: #F94C43;
+}
+.purple_color{
+    background: #D399FF;
+} */
+/* .s_people{
+    display: inline-block;
+    width: 33%;
+    margin-bottom: 50px;
+    text-align: center;
+    margin-top: -11.875rem;
+}
+.sctn_people{
+    background: #F0F0F0;
+} 
+
+/* .people_p1{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.6px;
+    color: #000000;
+    margin-top: 35px;
+   
+} */
+/* .p1_width{
+    max-width: 248px;
+}
+.p1_width2{
+    max-width: 272px;
+}
+.p1_width3{
+    max-width: 285px;
+} */
+/* .people_p2{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 23px;
+text-align: center;
+color: #000000;
+margin-top: 34px;
+margin-bottom: 44px;
+
+}
+
+.s_people a{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 21px;
+text-align: center;
+text-decoration-line: underline;
+color: #000000;
+} */
+
+
+/* ---------
+form--------
+----------- */
+/* .form_s{
+    padding-top: 79px;
+    padding-bottom: 88px;
+}
+.keep_it{
+    max-width: 496px;
+    margin: auto;
+}
+.keep_it h2{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+color: #000000;
+margin-bottom: 9px;
+}
+.keep_it p{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 20px;
+text-align: center;
+color: #000000;
+margin-bottom: 38px;
+}
+
+.form_style{
+    border: 1px solid #000000;
+border-radius: 0px;
+}
+.style_name{
+    width: 100%;
+    max-width: 153px;
+    padding: 12px 0 11px 8px;
+}
+.style_email{
+    width: 100%;
+    padding: 13px 0 10px 8px;
+    margin-top: 18px;
+    margin-bottom: 16px;
+
+}
+.first_last_name{
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
+max-width: 366px;
+margin: auto;
+}
+.button_subscribe{
+margin: auto;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 8px 23px;
+text-decoration: none;
+background: #000000;
+border: 1px solid #000000;
+border-radius: 100px;
+
+} */
+
+/* -------------
+**footer****
+------------- */
+
+/* footer{
+    background: #020202;
+border-radius: 0px;
+padding-top: 51px;
+padding-bottom:16px;
+}
+
+.footer_content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.icon_h li{
+    display: inline-block;
+    margin-top: 36px;
+    margin-left: 14px;
+    margin-right: 14px;
+}
+.icon_h li:first-of-type{
+    margin-left: 0;
+}
+.icon_h li:last-of-type{
+    margin-right: 0;
+}
+.content_r{
+    display: flex;
+}
+.about h3{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 23px;
+    color: #FFFFFF;
+    margin-bottom: 36px;
+}
+.about ul li {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 21px;
+color: #FFFFFF;
+margin-bottom: 12px;
+list-style: none;
+}
+.about li a{
+text-decoration: none;
+color: inherit;
+} */
+
+/* .contact h3{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 23px;
+color: #FFFFFF;
+margin-bottom: 36px;
+
+}
+.contact ul li{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 21px;
+color: #FFFFFF;
+margin-bottom: 12px;
+list-style: none;
+}
+.content_r .about{
+    margin-right: 70px;
+}
+
+.contact li a{
+    text-decoration: none;
+    color: inherit;
+    }
+    .f_copyright p{
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 23px;
+        text-align: center;
+        color: #FFFFFF;
+        margin-top: 8px;
+    } */
